@@ -53,6 +53,11 @@ public class UriResolver extends HttpServlet {
 	private static final String VERSION = "0.1.7 (20081110)";
 	static final String TITLE = "MMI Ontology URI resolver. Version " +VERSION;
 
+
+	// TODO put LATEST_VERSION_INDICATOR as a configuration parameter
+	private static final String LATEST_VERSION_INDICATOR = "$";
+	
+
 	private final Log log = LogFactory.getLog(UriResolver.class);
 
 	private final OntConfig ontConfig = new OntConfig();
@@ -272,7 +277,7 @@ public class UriResolver extends HttpServlet {
 		////////////////////////////////////////////////////////////////////////////////
 		
 		String version = mmiUri.getVersion();
-		if ( version == null || version.equals("-") ) {
+		if ( version == null || version.equals(LATEST_VERSION_INDICATOR) ) {
 			
 			//
 			// handling of unversioned and latest-version requests.
@@ -309,7 +314,7 @@ public class UriResolver extends HttpServlet {
 				
 				// OK: here, mmiUri refers to the latest version.
 				
-				// If the request was with version = '-', then redirect to versioned
+				// If the request was with version = LATEST_VERSION_INDICATOR, then redirect to versioned
 				// URI:   (see Issue 24)
 				if ( version == null ) {
 					// Let the dispatch continue.
