@@ -3,6 +3,10 @@ Carlos Rueda - MMI / MBARI
 
 ChangeLog
 
+2008-11-11   (Happy B-day Ini!)
+	- UriResolver.LATEST_VERSION_INDICATOR = "$"
+	
+
 2008-11-10
 	- Rule added: (a.2) an OWL document if is the user-agent is "Java/*"
 		This is a workaround for the following situation in VINE:
